fixed problems on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -130,19 +130,20 @@ body,
 }
 
 .sidebar {
+  width: 100%;
   overflow: auto;
   transition: width, color,
     background-color 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   background-color: var(--sidebar-background);
 }
 
+.sidebar.hidden {
+  width: 0px;
+}
+
 @media only screen and (min-width: 500px) {
   .sidebar {
     width: 230px;
-  }
-
-  .sidebar.hidden {
-    width: 0px;
   }
 }
 
@@ -204,7 +205,7 @@ body,
   font-weight: bold;
   position: relative;
   z-index: 0;
-  padding-left: 13%;
+  padding-left: 10%;
   text-align: left;
   background-color: var(--background-color);
 }
@@ -254,7 +255,7 @@ body,
 }
 
 .searchQuery input {
-  width: 190px;
+  width: 100%;
   border: 1px solid var(--text-color);
 }
 
@@ -378,7 +379,7 @@ textarea:focus {
 }
 
 #filterType {
-  width: 180px;
+  width: 100%;
 }
 
 .rc-slider {
@@ -606,7 +607,7 @@ textarea:focus {
 }
 
 .filterBox .textSelect {
-  width: 192px;
+  width: 100%;
 }
 
 .blue-white {
